# EzTranslator

./: .gitignore  README.md  README.pt-BR.md  installer.iss  pyproject.toml  run.py  translator-app-spec.md  translator-app.spec
src/translator_app/: config.py  hotkey_listener.py  logger.py  main.py  single_instance.py  startup.py  tray.py
src/translator_app/translator/: engine.py  languages.py  worker.py
src/translator_app/ui/: popup.py  settings.py
